# habits

./: LICENSE  TODO.md  habits.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
src/: habits.py
src/habits/: __init__.py  __main__.py
