[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habits"
dynamic = ["version"]
description = "Mini Habitica client"
#readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "habits@varonathe.org" }
]

keywords = [
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "cachecontrol[filecache] >= 0.12, < 0.15",
    "click                   >= 8.0",
    "platformdirs            >= 3.0, < 5.0",
    "python-dateutil         ~= 2.7",
    "requests                ~= 2.20",
]

[project.scripts]
habits = "habits:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/habits"
"Bug Tracker" = "https://github.com/jwodder/habits/issues"

[tool.hatch.version]
path = "habits.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/habits.py",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
