[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habits"
dynamic = ["version"]
description = "Mini Habitica client"
#readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "habits@varonathe.org" }
]

keywords = [
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

dependencies = [
    "cachecontrol[filecache] >= 0.12, < 0.15",
    "click                   >= 8.0",
    "platformdirs            >= 3.0, < 5.0",
    "python-dateutil         ~= 2.7",
    "requests                ~= 2.20",
]

[project.scripts]
habits = "habits.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/habits"
"Bug Tracker" = "https://github.com/jwodder/habits/issues"

[tool.hatch.version]
path = "src/habits/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
