[metadata]
name = habits
version = attr:habits.__version__
description = Mini Habitica client
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = habits@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/habits

keywords =
    ###

classifiers =
    Private :: Keep Off PyPI
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###

project_urls =
    Source Code = https://github.com/jwodder/habits
    Bug Tracker = https://github.com/jwodder/habits/issues

[options]
py_modules = habits
package_dir =
    =src
include_package_data = True
python_requires = ~=3.6
install_requires =
    cachecontrol[filecache] >= 0.12, < 0.14
    click                   >= 8.0
    platformdirs            >= 3.0, < 5.0
    python-dateutil         ~= 2.7
    requests                ~= 2.20

[options.entry_points]
console_scripts =
    habits = habits:main
